ZEUS-243 migrated to spring boot 3.0

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -35,6 +35,7 @@ spring:
   flyway:
     user: accountprocessoradmin
     password: password
+    clean-disabled: false
 logging:
   file:
     name: logs/local/account-processor.log
