ZEUS-273 updated to save changes for phone and email

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,7 @@ workflows:
   build:
     jobs:
       - build-and-test:
+          context: JIRA_WEBHOOK
           post-steps:
             - jira/notify
   sample:
