--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@
 # See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 orbs:
-  jira: circleci/jira@2.1.0
+  jira: circleci/jira@1.0.5
 jobs:
   # Below is the definition of your job to build and test your app, you can rename and customize it as you want.
   build-and-test:
@@ -33,7 +33,7 @@ workflows:
   build:
     jobs:
       - build-and-test:
-          context: JIRA_WEBHOOK
+#          context: JIRA_WEBHOOK
           post-steps:
             - jira/notify
   sample:
