--- a/openapi-spec/account-processor-api.yaml
+++ b/openapi-spec/account-processor-api.yaml
@@ -50,18 +50,18 @@ paths:
               $ref: '#/components/schemas/AccountProcessingRequest'
         required: true
       responses:
-        "409":
-          description: Conflict
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/ApiExceptionList'
         "201":
           description: Transaction successfully processed for the account
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/AccountProcessingResponse'
+        "409":
+          description: Conflict
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ApiExceptionList'
         "400":
           description: Bad Request
           content:
@@ -121,6 +121,7 @@ components:
       - changed
       - coverageTypeCode
       - endDate
+      - enrollmentType
       - groupPolicyId
       - marketplaceTypeCode
       - planId
@@ -159,6 +160,10 @@ components:
           type: string
           description: Business unit associated with the enrollment span
           example: FL_BU
+        enrollmentType:
+          type: string
+          description: The enrollment type of the enrollment span
+          example: PASSIVE
         startDate:
           type: string
           description: Start date associated with the enrollment span
@@ -2485,6 +2490,21 @@ components:
           type: string
           description: The date when the record was updated
           format: date-time
+    AccountProcessingResponse:
+      type: object
+      properties:
+        responseId:
+          type: string
+        requestPayloadId:
+          type: string
+        accountNumber:
+          type: string
+        ztcn:
+          type: string
+        responseCode:
+          type: string
+        responseMessage:
+          type: string
     ApiException:
       type: object
       properties:
@@ -2499,17 +2519,6 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/ApiException'
-    AccountProcessingResponse:
-      type: object
-      properties:
-        responseId:
-          type: string
-        requestPayloadId:
-          type: string
-        accountNumber:
-          type: string
-        ztcn:
-          type: string
     WelcomeDto:
       type: object
       properties:
